<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ITTY"
    tools:ignore="ContentDescription"
    android:background="@drawable/backgroundit">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <Button
        android:id="@+id/button"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/round_button"

        android:fontFamily="@font/bevan"
        android:text="@string/tt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button3"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bevan"
        android:text="@string/syllabus"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button48"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/round_button"

        android:fontFamily="@font/bevan"
        android:text="@string/grades"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/classroom"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/button48"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bevan"
        android:text="@string/classroom"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/logout"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/classroom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bevan"
        android:text="@string/logout1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

</RelativeLayout>